Unreviewed rollout r61311, because it made 2 tests fail on Qt bot.

[Qt] NPP_SetWindow seems to not be called when TestNetscapePlugin is moved
https://bugs.webkit.org/show_bug.cgi?id=36702

WebCore:

* plugins/qt/PluginViewQt.cpp:
(WebCore::PluginView::updatePluginWidget):

LayoutTests:

* platform/qt/Skipped:



Canonical link: https://commits.webkit.org/52325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61315 268f45cc-cd09-0410-ab3c-d52691b4dbfc